<?xml version="1.0" encoding="utf-8"?>
<!-- Menu used in the BleMainActivity -->
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_connect"
        android:title="@string/menu_connect"
        android:orderInCategory="2"/>
    <item android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="3"/>
    <item android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="4"/>
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="5"/>
    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="6"/>
</menu>
